samples/_failures_safe/1761503712_f8453d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2cd16b36.c: In function ‘main’:
./samples/SAFE/__tmp_2cd16b36.c:151:26: error: missing terminating " character
  151 |     mat2.rows = read_int("Rows (1-10
      |                          ^~~~~~~~~~~
./samples/SAFE/__tmp_2cd16b36.c:151:5: error: expected expression at end of input
  151 |     mat2.rows = read_int("Rows (1-10
      |     ^~~~
./samples/SAFE/__tmp_2cd16b36.c:151:17: error: too few arguments to function ‘read_int’
  151 |     mat2.rows = read_int("Rows (1-10
      |                 ^~~~~~~~
./samples/SAFE/__tmp_2cd16b36.c:15:5: note: declared here
   15 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_2cd16b36.c:151:5: error: expected declaration or statement at end of input
  151 |     mat2.rows = read_int("Rows (1-10
      |     ^~~~
